EKS_DOCKER_VELERO/Docker Registries/registry_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: democloudops
spec:
  selector:
    app: registry-cloudops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
